--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.2.2
   firebase_core: ^3.6.0
   google_nav_bar:
+  google_maps: ^8.1.1
 
 dev_dependencies:
   flutter_test:
