--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_core: ^3.6.0
   google_nav_bar:
   google_maps: ^8.1.1
+  cloud_firestore: ^5.4.4
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
